# audiobook-epub-sync

./: .gitignore  AGENTS.md  README.md  book_timeline.json  pyproject.toml
docs/: ARCHITECTURE.md
src/audiobook_epub_sync/: __init__.py  align.py  asr.py  audio.py  cli.py  epub.py  models.py  text.py
tests/: test_align.py  test_cli_smoke.py  test_text.py
